set(LIBRARY_VERSION_MAJOR 1)
set(LIBRARY_VERSION_MINOR 0)
set(LIBRARY_VERSION_PATCH 0)

HG_CMAKE_ADD_MODULE(Config inc src)

HG_CMAKE_MODULE_DEPEND_PUB( 
    ${HARU_LIBRARY}
    ${CUPS_LIBRARY}
    ${XLSXIO_READ_LIBRARY}
    ${XLSXIO_WRITE_LIBRARY}
)

if (PLATFORM STREQUAL "x64")
HG_CMAKE_ADD_SHARED(HGConfig inc src)
HG_CMAKE_MODULE_DEPEND(
    ${HARU_LIBRARY}
    ${CUPS_LIBRARY}
    ${XLSXIO_READ_LIBRARY}
    ${XLSXIO_WRITE_LIBRARY}
)
elseif (PLATFORM STREQUAL "win32")
HG_CMAKE_ADD_STATIC(HGConfig inc src)

target_link_libraries(HGConfig 
    ${XLSXIO_READ_LIBRARY}
    ${XLSXIO_WRITE_LIBRARY}
    ${HARU_LIBRARY}
    ws2_32 iphlpapi shlwapi
)
endif()

set_target_properties(HGConfig PROPERTIES 
    VERSION ${LIBRARY_VERSION_MAJOR}.${LIBRARY_VERSION_MINOR}.${LIBRARY_VERSION_PATCH}
    SOVERSION ${LIBRARY_VERSION_MAJOR}
)