set(LIBRARY_VERSION_MAJOR 1)
set(LIBRARY_VERSION_MINOR 0)
set(LIBRARY_VERSION_PATCH 0)

HG_CMAKE_ADD_MODELU(LowerPC inc src)


if (PLATFORM STREQUAL "x64")
HG_CMAKE_MODULE_DEPEND_PUB( 
    HGCommon
    ${LIB_SERIALPORT_LIBRARY}
    ${Boost_LIBRARIES}
    ${CUPS_LIBRARY}
)

HG_CMAKE_ADD_SHARED(HGLowerPC inc src)

HG_CMAKE_MODULE_DEPEND(
    HGCommon
    ${LIB_SERIALPORT_LIBRARY}
    ${Boost_LIBRARIES}
    ${CUPS_LIBRARY}
)
elseif (PLATFORM STREQUAL "win32")

HG_CMAKE_ADD_STATIC(HGLowerPC inc src)

target_link_libraries(HGCommon  
    ${LIB_SERIALPORT_LIBRARY}
    ${HG_PROJECT_ROOT_FS}/lib/libssl.a
    ${HG_PROJECT_ROOT_FS}/lib/libcrypto.a
    ${HG_PROJECT_ROOT_FS}/lib/libssh.a
    ${HG_PROJECT_ROOT_FS}/lib/libzlibstatic.a
    ws2_32 iphlpapi)
endif()

set_target_properties(HGLowerPC PROPERTIES 
    VERSION ${LIBRARY_VERSION_MAJOR}.${LIBRARY_VERSION_MINOR}.${LIBRARY_VERSION_PATCH}
    SOVERSION ${LIBRARY_VERSION_MAJOR}
)