set(LIBRARY_VERSION_MAJOR 1)
set(LIBRARY_VERSION_MINOR 0)
set(LIBRARY_VERSION_PATCH 0)

HG_CMAKE_ADD_MODELU(Sensor inc src)

if (PLATFORM STREQUAL "x64")
HG_CMAKE_MODULE_DEPEND_PUB( 
    ${OpenCV_LIBRARIES}  
)

HG_CMAKE_ADD_SHARED(HGSensor inc src)

HG_CMAKE_MODULE_DEPEND(
    ${OpenCV_LIBRARIES}  
)
elseif (PLATFORM STREQUAL "win32")

HG_CMAKE_ADD_STATIC(HGSensor inc src)
target_link_libraries(HGSensor ${OpenCV_LIBRARIES})
INCLUDE_DIRECTORIES(${HG_PROJECT_ROOT_FS}/include/opencv4)
endif()

set_target_properties(HGSensor PROPERTIES 
    VERSION ${LIBRARY_VERSION_MAJOR}.${LIBRARY_VERSION_MINOR}.${LIBRARY_VERSION_PATCH}
    SOVERSION ${LIBRARY_VERSION_MAJOR}
)